force-app/main/default/objects/custom_create18__c/custom_create18__c.object-meta.xml
<CustomObject>
    <label>Custom created object18</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects18</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>