force-app/main/default/objects/custom_create18__c/fields/custom_create_18field557__c.field-meta.xml
<CustomField>
    <fullName>custom_create_18field557__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 18field557</label>
    <type>Checkbox</type>
</CustomField>